# belegpilot

./: .env.example  .gitignore  README.md  pyproject.toml  tmp_models.sh
.github/workflows/: ci.yml
app/: config.py  main.py
app/api/: dependencies.py
app/api/routes/: extract.py  health.py  results.py
app/core/: categorizer.py  extractor_ocr.py  extractor_vlm.py  pipeline.py  preprocessor.py  validator.py
app/models/: database.py  schemas.py
app/observability/: logging.py  metrics.py  tracing.py
app/services/: auth.py  openrouter.py
app/static/: demo.html
deploy/: .env.production.example  docker-compose.production.yml
deploy/caddy/: Caddyfile
deploy/scripts/: add_traefik_route.sh  create_env.sh  setup_server.sh
docker/: Dockerfile  docker-compose.yml
examples/: python_client.py
scripts/: check_cost.py  generate_api_key.py  setup_db.py
tests/: conftest.py  test_auth.py  test_categorizer.py  test_extract.py  test_openrouter.py  test_pipeline.py  test_preprocessor.py  test_validator.py  test_vlm_extractor.py
